<resources>
    <string name="app_name">FoodDonation</string>

    <string name="select_city_prompt">Select City</string>
    <string name="city_label">City</string>
    <string name="food_type_label">Food Type</string>
    <string name="food_type_hint">Food Type</string>
    <string name="timings_label">Timings</string>
    <string name="timings_hint">Timings</string>
    <string name="date_label">Date</string>
    <string name="date_hint">Date</string>
    <string name="place_label">Place</string>
    <string name="place_hint">Place</string>
    <string name="post_availability_button">Post Availability</string>

</resources>